--- a/DowjonesAPI/appsettings.json
+++ b/DowjonesAPI/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;Encrypt=False"
-  }
+  "AllowedHosts": "*"
 }
